--- a/data/package.json
+++ b/data/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "type": "module",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  }
 }
