--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "https": "^1.0.0"
   }
 }
